--- a/home/cv.html
+++ b/home/cv.html
@@ -265,7 +265,7 @@ Biết dùng các phần mềm: OpenOffice, Borland, Microsoft C/C++, Motif Tool
   <h3>Từ Tháng Ba năm 2011 đến Tháng Bảy năm 2021 <a href="https://www.manulife.com.vn/" target="_blank">Manulife</a>, Việt-Nam</h3>
   <p><a href="/huu-ich/ke-hoach-tai-chinh/">Tư-vấn-tài-chính-gia-đình</a> (miễn-phí), tư-vấn các công-cụ đầu-tư và bảo-hiểm: <a href="/huu-ich/dau-tu-co-phieu/quy-dau-tu.html">quỹ-mở</a>, <a href="https://lhboi.name.vn/huu-ich/cac-loai-bao-hiem/diem-tua-dau-tu">Điểm Tựa Đầu Tư</a>, <a href="/huu-ich/cac-loai-bao-hiem/bhnt-lien-ket-chung.html">Gia Đình Tôi Yêu</a>.</p>
 
-  <h3>Từ Tháng Mười Một năm 2006 đến Tháng Mười Hai năm 2015 <a href="https://www.hcmc.netnam.vn/" target="_blank">Netnam</a>, Việt-Nam</h3>
+  <h3>Từ Tháng Mười Một năm 2006 đến Tháng Mười Hai năm 2015 <a href="https://netnam.com/" target="_blank">Netnam</a>, Việt-Nam</h3>
   <p>Tư-vấn-kỹ-thuật-mạng</p>
 
   <h3>Từ Tháng Tư năm 2005 đến Tháng Chín năm 2006 <a href="https://www.6wind.com/" target="_blank">6WIND</a></h3>
