--- a/huu-ich/index.html
+++ b/huu-ich/index.html
@@ -255,7 +255,7 @@ https://www.lhboi.name.vn/huu-ich/
   <h1>Ổn-định cuộc-sống và làm-giàu một cách chắc-chắn</h1>
   <div class="flright"><amp-img alt="Tự-do Tài-chính" src="/images/freedom1.jpg" width="282" height="172" layout="responsive"></amp-img></div>
   <p>Mọi-người đều cần và có-thể làm-giàu một cách chắc-chắn và dễ-dàng. Mỗi-người cần phải đủ giàu để có-thể <a href="tich-luy">ăn-xài suốt 30 năm cuối đời</a> mà không cần phải làm-việc để kiếm-tiến, lúc đó có muốn làm cũng không có đủ sức mà làm.
-  <br>Chúng-ta nên hiểu rõ thế-nào là giàu và từ-đó khẳng-định <a href="lam-giau-khong-kho">làm-giàu không khó</a>.</p>
+  <br>Chúng-ta nên hiểu rõ thế-nào là giàu và từ-đó khẳng-định <a href="https://lhboi.name.vn/huu-ich/lam-giau-khong-kho">làm-giàu không khó</a>.</p>
   <p><a href="../y-kien/su-giau-co">Có nhiều cách để trở-nên giàu-có</a>, nhưng đối-với <strong>đa-số</strong> người-thường trong xã-hội thì <strong>chỉ có một cách</strong> để trở-nên giàu-có là <a href="chi-tieu">chi-tiêu ít hơn số-tiền-kiếm-được</a> và tích-luỹ từ-từ.
   <br>Đa-số người-thường trong xã-hội kiếm-tiền bằng cách bán-sức-lao-động (chân-tay hay trí-óc). Một số ít người biết cách-quản-lý-đồng-tiền, làm cho nó sinh-lợi nhanh thì làm chủ.
   <br>Tuỳ-theo tài-quản-lý của người-chủ, số-tiền tối-đa người đó có thể quản-lý để sinh-lợi rất khác nhau, số-tiền lớn quá mức đó sẽ không được sinh-lợi tốt, thậm chí có thể bị lỗ.
