--- a/huu-ich/index.html
+++ b/huu-ich/index.html
@@ -270,13 +270,13 @@ https://www.lhboi.name.vn/huu-ich/
   <ul>
     <li>Lập <a href="ke-hoach-tai-chinh/">kế-hoạch-tài-chính</a> trọn-đời</li>
     <li>So-sánh <a href="tich-luy-dai-han">các công-cụ tích-luỹ dài-hạn</a></li>
-    <li><a href="cac-giai-doan">Các giai-đoạn khác nhau trong đời-người</a> và <a href="cau-chuyen/nhung-hon-da">những hòn-đá của cuộc-đời</a></li>
+    <li><a href="https://lhboi.name.vn/huu-ich/cac-giai-doan">Các giai-đoạn khác nhau trong đời-người</a> và <a href="https://lhboi.name.vn/huu-ich/cau-chuyen/nhung-hon-da">những hòn-đá của cuộc-đời</a></li>
     <li><a href="dung-so-dau-tu">Bắt-đầu đầu-tư từ đâu?</a></li>
     <li><a href="hieu-qua-dau-tu">Hiệu-quả của những vụ đầu-tư của tôi</a></li>
     <li><a href="lam-phat-loi-song">Kiểm-soát mức tăng chi-tiêu theo thời-gian</a> cần có <a href="nghi-luc">nghị-lực</a></li>
     <li><a href="cau-chuyen/nghi-huu-som">Làm-thế-nào để được <i>về-hưu sớm</i></a> và có <a href="cau-chuyen/nhung-quyet-dinh-tot-cho-tuoi-gia">tuổi-già an-nhàn</a>?</li>
     <li><a href="cau-chuyen/bat-dau-dau-tu">Bạn có nhớ thường-xuyên trả-tiền cho mình trước không?</a></li>
-    <li>Hãy <a href="cau-chuyen/dung-the-tin-dung-khon-ngoan">dùng thẻ-tín-dụng một cách khôn-ngoan</a> và <a href="cau-chuyen/tranh-mang-no">tránh mang nợ</a></li>
+    <li>Hãy <a href="https://lhboi.name.vn/huu-ich/cau-chuyen/dung-the-tin-dung-khon-ngoan">dùng thẻ-tín-dụng một cách khôn-ngoan</a> và <a href="cau-chuyen/tranh-mang-no">tránh mang nợ</a></li>
   </ul>
 
 <!-- AMP In-article 1 -->
