--- a/huu-ich/ke-hoach-tai-chinh/khtcp2.html
+++ b/huu-ich/ke-hoach-tai-chinh/khtcp2.html
@@ -234,7 +234,7 @@ data-ad-slot="5275186684">
 
   <div class="body">
     <div class="title">Lập kế hoạch tài chính gia đình</div>
-<div class="right">(<a href="https://lehboi.github.io/en/fa/pfr/pfrp2.html">English</a>)</div>
+<div class="right">(<a href="https://lehboi.github.io/en/fa/pfr/pfr2.html">English</a>)</div>
 <div class="right">Viết lần đầu trong Tháng Hai, 2019.</div>
 
   <div>
