--- a/huu-ich/ke-hoach-tai-chinh/khtcp1.html
+++ b/huu-ich/ke-hoach-tai-chinh/khtcp1.html
@@ -235,7 +235,7 @@ data-ad-slot="5275186684">
 
   <div class="body">
     <div class="title">Lập kế hoạch tài chính gia đình</div>
-<div class="right">(<a href="https://en.lhboi.name.vn/pfr/pfrp1">English</a>)</div>
+<div class="right">(<a href="https://en.lhboi.name.vn/pfr/pfr1.html">English</a>)</div>
 <div class="right">Viết lần đầu trong Tháng Hai, 2019.</div>
 
   <div>
