--- a/huu-ich/ke-hoach-tai-chinh/khtcp1.html
+++ b/huu-ich/ke-hoach-tai-chinh/khtcp1.html
@@ -660,7 +660,7 @@ data-ad-slot="3830899615">
     Trả-góp, Mục-tiêu, Bảo-hiểm.</p>
 <p>Bạn cần phải đánh giá lại lợi nhuận trung bình của tổng tài sản trong thời gian qua để điều chỉnh vào bản kế hoạch mới. 
     Để tính lợi nhuận trung bình thì bạn cần dùng bảng tính trong trang 
-    <a href="https://www.lhboi.name.vn/huu-ich/hieu-qua-dau-tu.html">Tính hiệu quả của việc đầu tư</a>.</p>
+    <a href="../hieu-qua-dau-tu.html">Tính hiệu quả của việc đầu tư</a>.</p>
 <p>Nếu không có thêm mục tiêu lớn thì tỷ lệ chi tiêu trên thu nhập không thay đổi nhiều sau mỗi lần cập nhật kế hoạch. Do đó 
     bạn nên liệt kê đủ các mục tiêu từ lần lập kế hoạch đầu tiên.
 <br>Bạn nên cố gắng đầu tư thêm hàng tháng cao hơn mức đã tính ra trong lộ trình để dự trữ cho những giai đoạn xấu 
