--- a/y-kien/dung-hang-viet-nam.html
+++ b/y-kien/dung-hang-viet-nam.html
@@ -232,7 +232,7 @@ data-ad-slot="5275186684">
 
   <div class="body">
     <div class="title">Dùng hàng Việt Nam</div>
-<div class="right"><a href="https://web.archive.org/web/20080704091029fw_/https://lhboi.homelinux.net:80/writing/dungf-hangf-VN" target='_blank'>Viết lần đầu trong năm 2002</a>.</div>
+<div class="right"><a href="https://web.archive.org/web/20140604195948/http://lhboi.homelinux.net/opinions/dung-hang-viet-nam.html" target='_blank'>Viết lần đầu trong năm 2002</a>.</div>
 
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
