--- a/home/cv.html
+++ b/home/cv.html
@@ -271,7 +271,7 @@ Biết dùng các phần mềm: OpenOffice, Borland, Microsoft C/C++, Motif Tool
   <h3>Từ Tháng Tư năm 2005 đến Tháng Chín năm 2006 <a href="https://www.6wind.com/" target="_blank">6WIND</a></h3>
   <p>Quản-lý-dự-án: quản-lý nhóm kỹ-sư-phần-mềm phát-triển router IPv6 từ phần-mềm-nguồn-mở</p>
 
-  <h3>Từ Tháng Hai năm 2003 đến Tháng Ba năm 2005 <a href="https://www.hcmc.netnam.vn/" target="_blank">Netnam</a>, Việt Nam</h3>
+  <h3>Từ Tháng Hai năm 2003 đến Tháng Ba năm 2005 <a href="https://netnam.com/" target="_blank">Netnam</a>, Việt Nam</h3>
   <p>Quản-lý-hệ-thống</p>
   <ul><li>Thiết-kế, thực-hiện, vận-hành hệ-thống-máy-tính của nhà-cung-cấp-dịch-vụ-Internet Netnam ở thành-phố-Hồ-Chí-Minh, Việt-Nam.</li></ul>
   <div class="indent"><i>Sử-dụng: Linux, Netfilter Iptables, traffic control, Squid, CacheFlow, MS Windows, MS SQL Server, Nortel CVX, Cisco router, ZyXEL DSLAM, Postfix, SpamAssassin, ClamAV.</i></div>
