--- a/huu-ich/dau-tu-co-phieu/index.html
+++ b/huu-ich/dau-tu-co-phieu/index.html
@@ -253,7 +253,7 @@ https://www.lhboi.name.vn/huu-ich/dau-tu-co-phieu/
     cao hơn gửi tiết kiệm ở ngân hàng. Vậy ai và khi nào có thể đầu tư vào cổ phiếu?
 <br>
 Có hai trường hợp đầu tư vào cổ phiếu:</p>
-<ol><li>mỗi tháng trích ra một ít tiền từ thu nhập để mua cổ phiếu để thực hiện các <a href="../cau-chuyen/nhung-hon-da">kế hoạch 
+<ol><li>mỗi tháng trích ra một ít tiền từ thu nhập để mua cổ phiếu để thực hiện các <a href="https://lhboi.name.vn/huu-ich/cau-chuyen/nhung-hon-da">kế hoạch 
     tích luỹ trung và dài hạn</a>, và bán dần cổ phiếu lấy tiền dùng khi đến hạn</li>
 <li>đang có một số tiền lớn trong ngân hàng, muốn chuyển sang cổ phiếu để có lợi nhuận cao hơn trong dài hạn hoặc trung hạn</li>
 </ol>
