--- a/home/about.html
+++ b/home/about.html
@@ -317,7 +317,7 @@ https://www.lhboi.name.vn/home/about
     <td>
       <dl>
         <dt class="fbold">
-          <a href="https://vi.wikipedia.org/wiki/Thành_viên:Lhboi" target="_blank">Wikipedia-Việt-Nam</a>
+          <a href="https://vi.wikipedia.org/wiki/%C4%90%E1%BA%B7c_bi%E1%BB%87t:%C4%90%C3%B3ng_g%C3%B3p/Lhboi" target="_blank">Wikipedia-Việt-Nam</a>
           <br><a href="https://www.duolingo.com/profile/BiL143798" target="_blank">Duolingo</a>
           <br><a href="https://drive.google.com/open?id=1WqIv1DqO1g-uZDZsyIJfSKDHSaoMEbk4cMUQ8Mk_68orzoH3PYN4abyajuX0" target="_blank">Vẽ bản-đồ Google</a>
         </dt>
