--- a/home/about.html
+++ b/home/about.html
@@ -166,8 +166,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
@@ -189,7 +189,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -250,7 +250,7 @@ https://www.lhboi.name.vn/home/about
   <table>
   <tbody>
   <tr>
-    <th><h2><a href="cv.html">Lê Hồng Bội</a></h2></th>
+    <th><h2><a href="cv">Lê Hồng Bội</a></h2></th>
 <!--    <th><h2>Nguyễn Thị Lan</h2></th> -->
   </tr>
   <tr>
@@ -318,7 +318,7 @@ https://www.lhboi.name.vn/home/about
       <dl>
         <dt class="fbold">
           <a href="https://vi.wikipedia.org/wiki/%C4%90%E1%BA%B7c_bi%E1%BB%87t:%C4%90%C3%B3ng_g%C3%B3p/Lhboi" target="_blank">Wikipedia-Việt-Nam</a>
-          <br><a href="https://www.duolingo.com/profile/BiL143798" target="_blank">Duolingo</a>
+          <br><a href="https://www.duolingo.com/profile/Boi-Le" target="_blank">Duolingo</a>
           <br><a href="https://drive.google.com/open?id=1WqIv1DqO1g-uZDZsyIJfSKDHSaoMEbk4cMUQ8Mk_68orzoH3PYN4abyajuX0" target="_blank">Vẽ bản-đồ Google</a>
         </dt>
         <dd></dd>
