--- a/en/fa/pfr/pfr1.html
+++ b/en/fa/pfr/pfr1.html
@@ -226,7 +226,7 @@ http://en.lhboi.name.vn/fa/pfr/
 <br>This is the tool you need to find an optimized roadmap running through all of those targets smoothly and avoiding struggle times lacking money. Using this tool you can keep a relatively stable spending over income ratio and living condition in your whole life.
 <br>This tool helps you quickly respond to any change in income, expenses, inflation, etc.
 </p>
-<p>This page gives step-by-step instructions on how to use the spreadsheet <b><a href="https://docs.google.com/spreadsheets/d/1QsMiRTOE4PA7rneoMt5tuiI6c_50cmGbkG64RKk0MQo/edit?usp=sharing" target="_blank">PFRp1</a></b> in financial planning. When you retire, you need to use the spreadsheet <a href="pfr2.html">PFRp2</a> to monitor your retirement fund.
+<p>This page gives step-by-step instructions on how to use the spreadsheet <b><a href="https://docs.google.com/spreadsheets/d/1QsMiRTOE4PA7rneoMt5tuiI6c_50cmGbkG64RKk0MQo/edit?usp=sharing" target="_blank">PFRp1</a></b> in financial planning. When you retire, you need to use the spreadsheet <a href="pfr2">PFRp2</a> to monitor your retirement fund.
 </p>
 <amp-accordion>
 <section>
