--- a/home/cv.html
+++ b/home/cv.html
@@ -166,8 +166,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
@@ -189,7 +189,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -248,7 +248,7 @@ https://www.lhboi.name.vn/home/cv
   </div>
 
   <h2>Kinh-nghiệm</h2>
-  <p>Sử-dụng <a href="../kinh-nghiem/may-tinh/gnucash.html">GnuCash</a> trong <a href="/huu-ich/ke-hoach-tai-chinh/">quản-lý-tài-chính-gia đình</a> từ năm 1998.</p>
+  <p>Sử-dụng <a href="/kinh-nghiem/may-tinh/gnucash">GnuCash</a> trong <a href="/huu-ich/ke-hoach-tai-chinh/">quản-lý-tài-chính-gia đình</a> từ năm 1998.</p>
   <p>Có kỹ-năng phân-tích và giải-quyết vấn-đề.</p>
   <p>Có kinh-nghiệm trong việc quản-lý-hệ-thống-máy-tính Linux/UNIX,
 <!--
@@ -263,7 +263,7 @@ Biết dùng các phần mềm: OpenOffice, Borland, Microsoft C/C++, Motif Tool
   <p>Có kinh-nghiệm làm-việc với người ngoại-quốc qua các chuyến-công-tác ở Đức, Canada, Nhật, Thái-Lan, Pháp.</p>
 
   <h3>Từ Tháng Ba năm 2011 đến Tháng Bảy năm 2021 <a href="https://www.manulife.com.vn/" target="_blank">Manulife</a>, Việt-Nam</h3>
-  <p><a href="/huu-ich/ke-hoach-tai-chinh/">Tư-vấn-tài-chính-gia-đình</a> (miễn-phí), tư-vấn các công-cụ đầu-tư và bảo-hiểm: <a href="/huu-ich/dau-tu-co-phieu/quy-dau-tu.html">quỹ-mở</a>, <a href="https://lhboi.name.vn/huu-ich/cac-loai-bao-hiem/diem-tua-dau-tu">Điểm Tựa Đầu Tư</a>, <a href="/huu-ich/cac-loai-bao-hiem/bhnt-lien-ket-chung.html">Gia Đình Tôi Yêu</a>.</p>
+  <p><a href="/huu-ich/ke-hoach-tai-chinh/">Tư-vấn-tài-chính-gia-đình</a> (miễn-phí), tư-vấn các công-cụ đầu-tư và bảo-hiểm: <a href="/huu-ich/dau-tu-co-phieu/quy-dau-tu">quỹ-mở</a>, <a href="https://lhboi.name.vn/huu-ich/cac-loai-bao-hiem/diem-tua-dau-tu">Điểm Tựa Đầu Tư</a>, <a href="/huu-ich/cac-loai-bao-hiem/bhnt-lien-ket-chung">Gia Đình Tôi Yêu</a>.</p>
 
   <h3>Từ Tháng Mười Một năm 2006 đến Tháng Mười Hai năm 2015 <a href="https://netnam.com/" target="_blank">Netnam</a>, Việt-Nam</h3>
   <p>Tư-vấn-kỹ-thuật-mạng</p>
