--- a/huu-ich/cac-loai-bao-hiem-2.html
+++ b/huu-ich/cac-loai-bao-hiem-2.html
@@ -167,8 +167,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
@@ -190,7 +190,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -250,16 +250,16 @@ https://www.lhboi.name.vn/huu-ich/cac-loai-bao-hiem/
   </div>
 
 <h1>Mua bảo hiểm có <span class="red">lời</span> không?</h1>
-<p>Trừ loại bảo hiểm liên kết đầu tư có thể đem lại lợi nhuận cao, các loại bảo hiểm nhân thọ đều có <a href="hieu-qua-dau-tu.html">lãi tương đương gửi tiết kiệm ở ngân hàng</a>, người mua bảo hiểm chỉ có <span class="red">lời nhiều</span> khi gặp rủi ro. Khi gặp rủi ro thì người mua bảo hiểm nhận được một số tiền <span class="red">lớn hơn</span> số phí bảo hiểm đã nộp cho công ty bảo hiểm, gặp rủi ro càng sớm thì càng lời nhiều.<br>
+<p>Trừ loại bảo hiểm liên kết đầu tư có thể đem lại lợi nhuận cao, các loại bảo hiểm nhân thọ đều có <a href="hieu-qua-dau-tu">lãi tương đương gửi tiết kiệm ở ngân hàng</a>, người mua bảo hiểm chỉ có <span class="red">lời nhiều</span> khi gặp rủi ro. Khi gặp rủi ro thì người mua bảo hiểm nhận được một số tiền <span class="red">lớn hơn</span> số phí bảo hiểm đã nộp cho công ty bảo hiểm, gặp rủi ro càng sớm thì càng lời nhiều.<br>
 Chắc chắn là không ai <span class="red">muốn</span> lời theo cách này, nhưng mọi người đều <span class="red">cần</span> có bảo hiểm. Nhiều người vẫn chưa phân biệt được cái mình <span class="red">muốn</span> và cái mình <span class="red">cần</span>, người ta chỉ cố để có cái mình muốn chứ không cố kiếm cái mình cần. Ví dụ: người ta cần một cái điện thoại di động nhưng lại muốn có iPhone, cần có bảo hiểm nhưng không muốn mua.<br>
-Mua bảo hiểm cũng giống như <a href="/y-kien/bat-ca-hai-tay.html">bắt cá hai tay</a>.<br>
-Mặc dù lãi suất tương đương nhưng <a href="cac-loai-bao-hiem/bhnt-lien-ket-chung.html">gửi tiền vào bảo hiểm liên kết chung</a> một cách đều đặn liên tục sẽ cho kết quả tốt hơn gửi ngân hàng.</p>
+Mua bảo hiểm cũng giống như <a href="/y-kien/bat-ca-hai-tay">bắt cá hai tay</a>.<br>
+Mặc dù lãi suất tương đương nhưng <a href="cac-loai-bao-hiem/bhnt-lien-ket-chung">gửi tiền vào bảo hiểm liên kết chung</a> một cách đều đặn liên tục sẽ cho kết quả tốt hơn gửi ngân hàng.</p>
 
 <h1>Mỗi người nên mua bảo hiểm nào?</h1>
 <p>Phần trên là tóm tắt về những sản phẩm bảo hiểm trên thị trường. Có nhiều sản phẩm như vậy thì nên mua thứ nào? Câu trả lời là không có một sản phẩm nào đáp ứng được hết mọi nhu cầu bảo hiểm của một người, phải lựa chọn các sản phẩm bổ sung cho nhau để có phạm vi bảo vệ nhiều nhất.<br>
 Việc chọn sản phẩm bảo hiểm bắt đầu từ <a href="ke-hoach-tai-chinh/">kế hoạch tài chính</a> của gia đình:</p>
 <ul><li>gia đình <span class="tmark">cần</span> chi số tiền bao nhiêu vào những thời điểm nào trong tương lai? Ví dụ mua nhà, trả nợ, cho con đi học, hưu trí…</li>
-<li>gia đình đã có cách <a href="tich-luy.html">tích luỹ</a>, <a href="cach-dau-tu.html">đầu tư</a> để có số tiền đó đúng lúc chưa?</li></ul>
+<li>gia đình đã có cách <a href="tich-luy">tích luỹ</a>, <a href="cach-dau-tu">đầu tư</a> để có số tiền đó đúng lúc chưa?</li></ul>
 <p>Khi đã có kế hoạch tài chính rồi, sẽ tính đến việc <b>bảo vệ</b> kế hoạch đó trước những rủi ro bằng những loại bảo hiểm.</p>
 <!-- AMP In-article 1 -->
 <amp-ad
@@ -300,16 +300,16 @@ Nếu Tử đến sau Lão thì chẳng có gì đáng lo, lúc đó người ta
 <br>
 Mỗi gia đình Nên có <span class="tmark">BH tử vong</span> với số tiền bằng tổng các khoản cần chi trong <a href="ke-hoach-tai-chinh/">kế hoạch tài chính</a> cộng với ít nhất 5 năm thu nhập của người làm ra tiền, nên mua BH tai nạn lớn hơn số tiền BH tử vong (vì tai nạn mà không tử vong thì thiệt hại có thể còn lớn hơn tử vong).<br>
 Các công ty BH nhân thọ có bán BH tử vong và BH tai nạn dưới dạng sản phẩm bổ trợ với mức phí <span class="tmark">rất thấp</span>, ví dụ BH tai nạn 100 triệu đồng chỉ cần đóng 200-400 ngàn đồng/năm tuỳ theo nghề nghiệp có nguy cơ thấp hay cao, BH tử vong 100 triệu đồng chỉ cần đóng 250 ngàn đồng/năm trở lên tuỳ theo tuổi. Gọi là sản phẩm bổ trợ là vì không có giá trị hoàn lại và phải mua kèm với một sản phẩm chính có số tiền bảo hiểm ít nhất bằng 20 hay 25% số tiền bảo hiểm của sản phẩm bổ trợ. Ví dụ: để có BH tai nạn 1 tỉ đồng thì mua kèm với sản phẩm chính 250 triệu đồng.</p>
-<div class="center">sang trang <a href="cac-loai-bao-hiem/">1</a> - 2 - <a href="cac-loai-bao-hiem-3.html">3</a></div>
+<div class="center">sang trang <a href="cac-loai-bao-hiem/">1</a> - 2 - <a href="cac-loai-bao-hiem-3">3</a></div>
 <div class="todiscuss">
 Các bài liên quan:
-<br>* <a href="cac-loai-bao-hiem/bhnt-lien-ket-chung.html">BHNT liên kết chung là gì?</a>
-<br>* <a href="tich-luy.html">Tích luỹ tiền để đủ sống trọn đời</a>
+<br>* <a href="cac-loai-bao-hiem/bhnt-lien-ket-chung">BHNT liên kết chung là gì?</a>
+<br>* <a href="tich-luy">Tích luỹ tiền để đủ sống trọn đời</a>
 <br>* <a href="ke-hoach-tai-chinh/">Lập kế hoạch ổn định tài chính suốt đời thật đơn giản</a>
 <br>* <a href="dau-tu-co-phieu/">Một cách đầu tư cổ phiếu ít rủi ro</a>
-<br>* <a href="dau-tu-co-phieu/so-tk-hay-dau-tu.html">Quỹ đầu tư cho lợi nhuận cao hơn gửi ngân hàng</a>
-<br>* <a href="/y-kien/bat-ca-hai-tay.html">Bắt cá hai tay nghĩa là gì?</a>
-<br>* <a href="cach-dau-tu.html">Phân biệt những cách đầu tư và đầu cơ</a>
+<br>* <a href="dau-tu-co-phieu/so-tk-hay-dau-tu">Quỹ đầu tư cho lợi nhuận cao hơn gửi ngân hàng</a>
+<br>* <a href="/y-kien/bat-ca-hai-tay">Bắt cá hai tay nghĩa là gì?</a>
+<br>* <a href="cach-dau-tu">Phân biệt những cách đầu tư và đầu cơ</a>
 <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132804613009051648" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/376045612561053" rel="nofollow" target="_blank">Facebook</a>
 </div>
 
